--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
   # Log in to the docker CLI with the environment variables you set in Travisci.com 
   # for this project under "settings"/"Environment Variables"
   # Be sure to escape special caracters with \
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --pasword-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take this images and push them to docker hub
   - docker push willempoort/multi-client
   - docker push willempoort/multi-nginx
